Instant Address Standard/main/default/objects/Error_Log__c/fields/FuncitonName__c.field-meta.xml
<CustomField>
    <fullName>FuncitonName__c</fullName>
    <label>Funciton Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>