Instant Address Standard/main/default/objects/Error_Log__c/fields/LicenseId__c.field-meta.xml
<CustomField>
    <fullName>LicenseId__c</fullName>
    <label>License Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>