Instant Address Standard/main/default/objects/Error_Log__c/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <label>LineNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>