Instant Address Standard/main/default/objects/Error_Log__c/fields/SourceModule__c.field-meta.xml
<CustomField>
    <fullName>SourceModule__c</fullName>
    <label>Source Module</label>
    <length>100</length>
    <type>Text</type>
</CustomField>