Instant Address Standard/main/default/objects/Error_Log__c/fields/StackTraceString__c.field-meta.xml
<CustomField>
    <fullName>StackTraceString__c</fullName>
    <label>StackTraceString</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>