Instant Address Standard/main/default/objects/Error_Log__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>User Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>